# routers/router.go
@@ -5,6 +5,7 @@ import (
 
 	"github.com/cuijxin/go-gin-example/middleware/jwt"
 	"github.com/cuijxin/go-gin-example/pkg/export"
+	"github.com/cuijxin/go-gin-example/pkg/qrcode"
 	"github.com/cuijxin/go-gin-example/pkg/setting"
 	"github.com/cuijxin/go-gin-example/pkg/upload"
 	"github.com/cuijxin/go-gin-example/routers/api"
@@ -32,6 +33,7 @@ func InitRouter() *gin.Engine {
 	// 本地搭建的话，Go本身对此就有很好的支持，而Gin更是再封装了一层，只需要在路由增加一行代码即可
 	r.StaticFS("/upload/images", http.Dir(upload.GetImageFullPath()))
 	r.StaticFS("/export", http.Dir(export.GetExcelFullPath()))
+	r.StaticFS("/qrcode", http.Dir(qrcode.GetQrCodeFullPath()))
 
 	r.GET("/auth", api.GetAuth)
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
@@ -63,6 +65,8 @@ func InitRouter() *gin.Engine {
 		apiv1.PUT("/articles/:id", v1.EditArticle)
 		// 删除指定文章
 		apiv1.DELETE("/articles/:id", v1.DeleteArticle)
+
+		apiv1.POST("/articles/poster/generate", v1.GenerateArticlePoster)
 	}
 
 	return r
